--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,18 @@
   color: #61dafb;
 }
 
+.player-text {
+  color: rgb(255, 94, 0);
+}
+
+.com1-text {
+  color: rgb(138, 138, 138);
+}
+
+.com2-text {
+  color: rgb(65, 138, 143);
+}
+
 .button {
   background-color: #1943fc; /* Green */
   border: none;
